<resources>
    <string name="app_name">寰宇通讯</string>

    <string name="loading">数据加载中…</string>
    <string name="network_isnot_available">网络不可用</string>
    <string name="User_name_cannot_be_empty">用户名不能为空！</string>
    <string name="Password_cannot_be_empty">密码不能为空！</string>
    <string name="old_password_cannot_be_empty">旧密码不能为空</string>
    <string name="new_password_cannot_be_empty">新密码不能为空</string>
    <string name="confirm_new_password_cannot_be_empty">确认密码不能为空</string>
    <string name="confirm_password_not_equal_old_password">新密码和确认密码不一致</string>
    <string name="regist_msg">提醒：为保证用户资料的真实性，注册时请填写您的手机号码</string>
    <string name="change_password">修改密码</string>
    <string name="online_report">在线举报</string>
    <string name="multiple_send_assistant">群发助手</string>
    <string name="add_friend">添加朋友</string>
    <string name="edit_group_name">修改群名称</string>
    <string name="apply_add_friend">申请添加好友</string>
    <string name="user_base_info">基本信息</string>
    <string name="scan">扫一扫</string>
    <string name="create_group">新建群组</string>
    <string name="scan_add_friend">扫一扫,添加好友</string>
    <string name="qr_code_wrong">二维码错误，请重新进入生成！</string>
    <string name="save_success">保存成功！</string>
    <string name="share_your_news">分享你的精彩瞬间...</string>
    <string name="send_my_news">发表朋友圈</string>
    <string name="code_find_count_format"><Data><![CDATA[该号码当前连续未开：<font color="#ff0000"> %d </font>期]]></Data></string>
    <string name="your_current_thought">这一刻的想法...</string>
    <string name="report_introduce">请填写举报内容</string>
    <string name="hint_create_group">请填写群名称</string>
    <string name="submit">提交</string>
    <string name="delete">删除</string>
    <string name="collect">收藏</string>
    <string name="new_friend">新朋友</string>
    <string name="rat">鼠</string>
    <string name="ox">牛</string>
    <string name="tiger">虎</string>
    <string name="rabbit">兔</string>
    <string name="loong">龍</string>
    <string name="snake">蛇</string>
    <string name="horse">馬</string>
    <string name="sheep">羊</string>
    <string name="monkey">猴</string>
    <string name="chicken">雞</string>
    <string name="dog">狗</string>
    <string name="pig">豬</string>
    <string name="accept">接受</string>
    <string name="create_immediately">立即创建</string>
    <string name="already_accept">已添加</string>
    <string name="delete_confirm">您确定要删除此好友吗？</string>
    <string name="updates">动态</string>
    <string name="find">发现</string>
    <string name="group_name">群名称：</string>
    <string name="group_avatar">群头像：</string>
    <string name="delete_success">删除成功</string>
    <string name="add_as_friend">加为好友</string>
    <string name="my_qr_code">我的二维码</string>
    <string name="qr_code_introduce">扫描上面的二维码，加我为好友</string>
    <string name="save_qr_code">保存二维码</string>
    <string name="introduce_my_app">安全聊天不留痕，我在彩信等你</string>
    <string name="sign_now">立即签到</string>
    <string name="sign">签到</string>
    <string name="Two_input_password">两次输入的密码不一致，请重新输入!</string>
    <string name="search">搜索</string>
    <string name="search_friend">输入好友账号查找好友</string>
    <string name="ok">确定</string>
    <string name="cancel">取消</string>
    <string name="im_press_say">按住 说话</string>
    <string name="no_talk">全体禁言</string>
    <string name="comment">评论</string>
    <string name="im_send_msg">发送消息...</string>
    <string name="content_empty">请输入内容</string>
    <string name="send">发送</string>
    <string name="call_me">[有人@我]</string>
    <string name="permission_storage_refused">您拒绝了文件读写的权限，请到设置中修改</string>
    <string name="permission_camera_refused">您拒绝了使用摄像头的权限，请到设置中修改</string>
    <string name="permission_record_audio_refused">您拒绝了使用麦克风的权限，请到设置中修改</string>
    <string name="permission_location_refused">您拒绝了使用定位的权限，请到设置中修改</string>
    <string name="permission_read_phone_state_refused">您拒绝了读取手机信息的权限，请到设置中修改</string>
    <string name="img_camera_cancel">取消拍照</string>
    <string name="img_alumb_cancel">取消选择</string>
    <string name="img_crop_cancel">取消裁剪</string>
    <string name="im_choose_image">选择图片</string>
    <string name="im_no_image">没有找到图片</string>
    <string name="message_text_copy">复制</string>
    <string name="copy_success">复制成功</string>
    <string name="multiple_send_friend">群发助手——好友</string>
    <string name="multiple_send_group">群发助手——群组</string>
    <string name="friend_info">个人资料</string>
    <string name="add_black_friend_success">添加黑名单成功！</string>
    <string name="remove_black_friend_success">移除黑名单成功！</string>
    <string name="remove">移除</string>
    <string name="group_own_and_manager">群主及管理员</string>
    <string name="member">群成员</string>
    <string name="remove_group_member">移除群成员</string>
    <string name="add_group_member">添加群成员</string>
    <string name="find_chat_history">查找聊天记录</string>
    <string name="add_group_manager">添加管理员</string>
    <string name="delete_group_manager">删除管理员</string>
    <string name="group_name_detail">群组名称： </string>
    <string name="group_avatar_detail">群组头像： </string>
    <string name="group_forbid_talk">群组禁言</string>
    <string name="clean_chat_history">清空聊天记录</string>
    <string name="remember_pass">记住密码</string>
    <string name="forget_pass">忘记密码？</string>
    <string name="telephone_number">手机号码</string>
    <string name="to_use_verify_code_introduce">用短信验证码登陆</string>
    <string name="to_use_password_introduce">用密码登陆</string>
    <string name="password">密码</string>
    <string name="register_user">注册用户</string>
    <string name="verify_code">验证码</string>
    <string name="password_input_introduce">请输入密码</string>
    <string name="verify_code_input_introduce">请输入验证码</string>
    <string name="telephone_number_input_introduce">请输入手机号</string>
    <string name="leave_group">退出群组</string>
    <string name="is_leave_group">确定退出此群组？</string>
    <string name="black_list">黑名单</string>
    <string name="chat_history">聊天记录</string>
    <string name="group_info">群组信息</string>
    <string name="phone_contact">手机通讯录</string>
    <string name="activity_center">活动中心</string>
    <string name="multiple_send_group_and_friend">群发助手——好友+群组</string>
    <string name="at_least_choose_one">至少选择一个</string>
    <string name="my_friends_number">我的好友（%s）</string>
    <string name="my_groups_number">我的群组（%s）</string>
    <string name="collect_success">收藏成功</string>
    <string name="message_text_delete">撤回</string>
    <string name="set_note">设置备注</string>
    <string name="me">我</string>
    <string name="im_input_img">图片</string>
    <string name="im_input_ziliao">资料</string>
    <string name="im_input_camera">拍摄</string>
    <string name="year_month">%s 年 %s 月</string>
    <string name="im_input_voice">语音输入</string>
    <string name="im_input_red_pack">普通红包</string>
    <string name="im_input_exclusive_red_pack">专属红包</string>
    <string name="im_input_location">位置</string>
    <string name="red_pack_status_unrob">领取红包</string>
    <string name="were_mentioned">[有人@我]</string>
    <string name="need_permission_msg">为了不影响您的正常使用，请允许开启存储权限</string>
    <string name="confirm">确定</string>
    <string name="if_clean_chat_history">是否清空聊天记录?</string>
    <string name="daily_sign">每日签到</string>
    <string name="only_scan_related_my_app">只能扫描此APP相关的二维码</string>
    <string name="scan_cannot_identify">扫描无法识别</string>
    <string name="already_exist_friend">他已经是您的好友！</string>
    <string name="already_friend">已是好友</string>
    <string name="already_black_friend">已在黑名单</string>
    <string name="multiple_send_need_money">群发一次消息需要花费您10元余额，请悉知</string>
    <string name="he_is_in_your_black_list">您添加的好友在你的黑名单中！</string>
    <string name="prompt">提示</string>
    <string name="confirm_delete">确定删除吗?</string>
    <string name="emoji_confirm_delete">表情删除后不可恢复，是否删除?</string>
    <string name="complete">完成</string>
    <string name="Application_and_notify">申请与通知</string>
    <string name="red_pack_open_introduce">发了一个红包，金额随机</string>
    <string name="red_pack_13">开</string>
    <string name="red_pack_14">查看领取详情》</string>
    <string name="default_greetings">恭喜发财，大吉大利</string>
    <string name="red_pack_15">恭喜你!</string>
    <string name="red_pack_16">抢到 %1$s 派发的%2$s红包</string>
    <string name="red_pack_18">已存入「我的%1$s」</string>
    <string name="red_pack_19">已领取%1$s个，共%2$s元</string>
    <string name="red_pack_20">未抢到</string>
    <string name="red_pack_open">拆红包</string>
    <string name="red_pack_23">总金额</string>
    <string name="red_count">红包个数</string>
    <string name="greetings">祝福语</string>
    <string name="red_ge">个</string>
    <string name="red_yuan">元</string>
    <string name="total">全部</string>
    <string name="red_total_introduce">发红包总金额最少%s元，最多%s元</string>
    <string name="red_count_introduce">每次最多可发%s个随机红包</string>
    <string name="no_more_than_ten_string">祝福语不得超过10个字符</string>
    <string name="red_send_button_introduce">塞钱进红包</string>
    <string name="exchange_momo_good_hint">温馨提示：10:00-22.00为客服正常上班时间，在此期间内，工作人员加速处理中，2小时内将完成审核。不便之处，敬请谅解...</string>
    <string name="exchange_momo_msg">小提示：\n1.彩金可转换到推荐的平台进行[娱乐]和[提现]\n2.不允许[多个]app账户兑换到[同一个]平台账户\n3.不允许[一个]app账户兑换到[多个]平台账户\n4.平台账户必须如实填写[真实姓名]和[联系电话]和[银行]信息，如因信息错误导致的问题由用户自行承担\n5.如对兑换存在疑问，可进入平台联系客服</string>

    <string name="header">头像</string>
    <string name="nick_name">昵称</string>
    <string name="exit_login">退出登陆</string>
    <string name="mobile">手机号</string>
    <string name="invitation_code">邀请码</string>
    <string name="my_signature">个性签名</string>
    <string name="add_to_black_list">加入黑名单</string>
    <string name="input_nick_name">请输入昵称</string>
    <string name="input_signature">请输入你的个性签名...</string>
    <string name="no_input_nick_name">昵称不能为空</string>
    <string name="input_nick_name_more_than_two">昵称不能小于两位</string>
    <string name="edit_nick_name_success">修改昵称成功</string>
    <string name="edit_nick_name">修改昵称</string>
    <string name="aomen_gallery">澳门图库</string>
    <string name="choose_code_helper">挑码助手</string>
    <string name="xianggang_gallery">香港图库</string>
    <string name="edit_signature_success">修改个性签名成功</string>
    <string name="input_new_nick_name">请输入新的昵称</string>
    <string name="input_new_signature">请输入新的个性签名</string>
    <string name="change_login_password">修改登陆密码</string>
    <string name="change_pay_password">修改支付密码</string>
    <string name="set_pay_password">设置支付密码</string>
    <string name="friend_news">好友动态</string>
    <string name="security_setting">安全设置</string>
    <string name="receive_people">领取人</string>
    <string name="input_old_password">请输入旧密码</string>
    <string name="input_new_password">请输入新密码</string>
    <string name="confirm_new_password">请确认新密码</string>
    <string name="normal_setting">通用设置</string>
    <string name="content_can_not_empty">内容不能为空!</string>
    <string name="message_notice">消息提醒</string>
    <string name="use_agreement_privacy_policy">用户协议和隐私政策</string>

    <string name="pic_channel">图片线路</string>
    <string name="pic_channel_select">图片线路选择</string>
    <string name="ip_address">当前路线</string>
</resources>
