<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:app="http://schemas.android.com/apk/res-auto">

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/white"
        android:fitsSystemWindows="true"
        android:orientation="vertical"
        tools:context=".chatroom.activity.SendRedPackActivity">

        <caixin.android.com.widget.TitleBar
            android:id="@+id/title_bar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:titleBarBackground="@color/colorPrimary"
            app:titleBarLeftImage="@mipmap/icon_back" />

        <LinearLayout
            android:id="@+id/group_pj"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginLeft="@dimen/dp_10"
            android:layout_marginRight="@dimen/dp_10"
            android:background="@color/white"
            android:orientation="vertical">

            <TextView
                android:id="@+id/textView_red_surplus"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="10dp"
                android:text="余额：0.00" />

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginTop="10dp"
                android:background="@drawable/bg_red_pack_edit"
                android:paddingLeft="10dp"
                android:paddingRight="10dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:text="@string/red_pack_23"
                    android:textColor="@color/textColor"
                    android:textSize="14sp" />

                <EditText
                    android:id="@+id/edit_coin_pj"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:background="@null"
                    android:gravity="center"
                    android:hint="0.00"
                    android:inputType="numberDecimal"
                    android:maxLength="8"
                    android:paddingLeft="10dp"
                    android:paddingRight="10dp"
                    android:singleLine="true"
                    android:textColor="@color/red"
                    android:textSize="18sp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/coin_name_2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentRight="true"
                    android:layout_centerVertical="true"
                    android:text="@string/red_yuan"
                    android:textColor="@color/gray1"
                    android:textSize="14sp" />
            </RelativeLayout>

            <TextView
                android:id="@+id/tv_money_introduce"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

            <RelativeLayout
                android:id="@+id/rl_selected_person"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginTop="15dp"
                android:background="@drawable/bg_red_pack_edit"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_alignParentBottom="true"
                    android:layout_marginStart="10dp"
                    android:layout_marginBottom="0dp"
                    android:gravity="center"
                    android:text="@string/receive_people"
                    android:textColor="@color/black"
                    android:textSize="16sp"
                    tools:ignore="ContentDescription,HardcodedText,RelativeOverlap" />

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_marginRight="10dp"
                    android:layout_toLeftOf="@+id/iv_right_row"
                    android:gravity="center_vertical"
                    android:orientation="horizontal">

                    <ImageView
                        android:id="@+id/iv_avatar"
                        android:layout_width="40dp"
                        android:layout_height="40dp"
                        android:layout_marginStart="5dp"
                        android:visibility="gone"
                        app:srcCompat="@mipmap/img_user_head" />

                    <TextView
                        android:id="@+id/tv_name"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="5dp"
                        android:text="请选择"
                        android:textSize="14sp" />
                </LinearLayout>

                <ImageView
                    android:id="@+id/iv_right_row"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_alignParentEnd="true"
                    android:layout_marginEnd="20dp"
                    android:src="@mipmap/jiantou_right"
                    tools:ignore="ContentDescription" />
            </RelativeLayout>

            <RelativeLayout
                android:id="@+id/rl_red_count"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginTop="15dp"
                android:background="@drawable/bg_red_pack_edit"
                android:paddingLeft="10dp"
                android:paddingRight="10dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:text="@string/red_count"
                    android:textColor="@color/textColor"
                    android:textSize="14sp" />

                <EditText
                    android:id="@+id/edit_count_pj"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:background="@null"
                    android:gravity="center"
                    android:hint="填写个数"
                    android:inputType="number"
                    android:maxLength="6"
                    android:paddingLeft="10dp"
                    android:paddingRight="10dp"
                    android:singleLine="true"
                    android:textColor="@color/textColor"
                    android:textSize="18sp" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentRight="true"
                    android:layout_centerVertical="true"
                    android:text="@string/red_ge"
                    android:textColor="@color/gray1"
                    android:textSize="14sp" />
            </RelativeLayout>

            <TextView
                android:id="@+id/tv_red_count_introduce"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

            <RelativeLayout
                android:id="@+id/rl_greetings"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginTop="15dp"
                android:background="@drawable/bg_red_pack_edit"
                android:paddingLeft="10dp"
                android:paddingRight="10dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:text="@string/greetings"
                    android:textColor="@color/textColor"
                    android:textSize="14sp" />

                <EditText
                    android:id="@+id/et_greetings"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:background="@null"
                    android:gravity="center"
                    android:hint="@string/default_greetings"
                    android:maxLength="10"
                    android:paddingLeft="10dp"
                    android:paddingRight="10dp"
                    android:singleLine="true"
                    android:textColor="@color/textColor"
                    android:textSize="18sp" />

            </RelativeLayout>

            <TextView
                android:id="@+id/tv_greetings_introduce"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/no_more_than_ten_string" />

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="50dp"
                android:gravity="center"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/symbol"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignBottom="@+id/text_money"
                    android:text="￥"
                    android:textColor="@color/black1"
                    android:textSize="24sp"></TextView>

                <TextView
                    android:id="@+id/text_money"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_toRightOf="@+id/symbol"
                    android:text="0.00"
                    android:textColor="@color/black1"
                    android:textSize="36sp"></TextView>

            </RelativeLayout>

            <RelativeLayout
                android:id="@+id/rl_send_red"
                android:layout_width="match_parent"
                android:layout_height="45dp"
                android:layout_marginTop="10dp"
                android:background="@drawable/bg_red_pack_send_unaction"
                android:gravity="center">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:padding="5dp"
                    android:text="@string/red_send_button_introduce"
                    android:textColor="@color/white"
                    android:textSize="18sp"></TextView>
            </RelativeLayout>
        </LinearLayout>

    </LinearLayout>

</layout>